# research-assistant

./: .gitignore  HUMAN_IN_THE_LOOP.md  IMPLEMENTATION.md  LICENSE  QUICKREF.md  README.md  SUMMARY.md  pyproject.toml  shell.nix
docs/: ARCHITECTURE.md  ATTRIBUTION.md  CONFIG_EXAMPLES.md  GIT_IMPLEMENTATION_COMPLETE.md  GIT_TRACKING_IMPLEMENTATION.md  GIT_TRACKING_REVIEW.md  QUICKREF.md  RESOURCES_EXAMPLES.md  USAGE.md  USER_GUIDE.md
examples/: usage_examples.py
examples/example_project/input/: data_description.md
src/research_assistant/: __init__.py  assistant.py  cli.py  config.py  config_manager.py  environment.py  git_tracker.py  orchestrator.py  resources.py  state.py  tools.py
src/research_assistant/modules/: analysis.py  idea.py  literature.py  methodology.py  paper.py  review.py
tests/: test_basic.py  test_git_tracking.py
